Update hooks, fix salary as None, edit histplots

--- a/src/notebooks/hh_analytics.ipynb
+++ b/src/notebooks/hh_analytics.ipynb
@@ -587,14 +587,14 @@
     "\n",
     "fz.add_subplot(2, 2, 3)\n",
     "plt.title('From: Distribution ')\n",
-    "sns.distplot(df['From'].dropna(), bins=8, color='C0')\n",
+    "sns.histplot(df['From'].dropna(), bins=8, color='C0', kde=True)\n",
     "plt.grid(True)\n",
     "plt.xlim([0, df['From'].max()])\n",
     "plt.yticks([], [])\n",
     "\n",
     "fz.add_subplot(2, 2, 4)\n",
     "plt.title('To: Distribution')\n",
-    "sns.distplot(df['To'].dropna(), bins=8, color='C1')\n",
+    "sns.histplot(df['To'].dropna(), bins=8, color='C1', kde=True)\n",
     "plt.grid(True)\n",
     "plt.xlim([0, df['To'].max()])\n",
     "plt.yticks([], [])\n",
@@ -896,7 +896,7 @@
     "\n",
     "# Print top words used in keys\n",
     "idx = np.ravel(X_train_text.sum(axis=0).argsort(axis=1))[::-1][:7]\n",
-    "top_words = np.array(tf_idf.get_feature_names())[idx].tolist()\n",
+    "top_words = np.array(tf_idf.get_feature_names_out())[idx].tolist()\n",
     "print('Top words used in keys: {}'. format(top_words))\n",
     "\n",
     "# One-hot-encoding for data frame features\n",
@@ -1233,7 +1233,7 @@
     "\n",
     "fp.add_subplot(2, 2, 3)\n",
     "plt.title('Average: Distribution ')\n",
-    "sns.distplot(df_tst[['Average']].dropna(), bins=12)\n",
+    "sns.histplot(df_tst[['Average']].dropna(), bins=12)\n",
     "plt.grid(False)\n",
     "plt.yticks([], [])\n",
     "plt.tight_layout()"
